# ranni

./: .harper-dictionary.txt  Cargo.toml  README.md  build.rs  mise.toml
docs/: design.md  roadmap.md
lib/: core.rni
src/: cli.rs  lsp.rs  main.rs  parser.rs
tree-sitter-ranni/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-ranni/bindings/c/: tree-sitter-ranni.pc.in
tree-sitter-ranni/bindings/go/: binding.go  binding_test.go
tree-sitter-ranni/bindings/node/: binding.cc  index.js
tree-sitter-ranni/bindings/python/tests/: test_binding.py
tree-sitter-ranni/bindings/python/tree_sitter_ranni/: __init__.py  binding.c
tree-sitter-ranni/bindings/rust/: build.rs  lib.rs
tree-sitter-ranni/bindings/swift/TreeSitterRanni/: ranni.h
tree-sitter-ranni/bindings/swift/TreeSitterRanniTests/: TreeSitterRanniTests.swift
tree-sitter-ranni/src/: grammar.json  parser.c
