[package]
name = "ranni"
version = "0.1.0"
edition = "2024"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us"]
repository = "https://github.com/rushsteve1/ranni"
license = "MIT"

[dependencies]
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
tokio = { version = "1.48", features = ["full"] }
tower-lsp = "0.20"
uuid = "1.18"
