[package]
name = "ranni"
version = "0.1.0"
edition = "2024"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us"]
repository = "https://github.com/rushsteve1/ranni"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3.3"
maud = { version = "0.27", features = ["axum"] }
rust-sitter = { version = "0.4", default-features = false, features = ["tree-sitter-standard"] }
tokio = { version = "1.48", features = ["full"] }
tower-lsp-server = "0.22.1"
tracing = "0.1"
uuid = "1.18"

[features]
default = ["compiler"]
compiler = []

[build-dependencies]
rust-sitter-tool = "0.4"
